--- a/DockerTestImage/YAML/Service.yaml
+++ b/DockerTestImage/YAML/Service.yaml
@@ -2,7 +2,7 @@
 kind: Service
 metadata:
   labels:
-    app: webapitest
+    app: webapi
     component: frontend
   name: frontend
 spec:
@@ -10,6 +10,6 @@ spec:
   - port: 80
     targetPort: 8080
   selector:
-    app: webapitest
+    app: webapi
     component: frontend
   type: LoadBalancer
