--- a/DockerTestImage/YAML/Deployment.yaml
+++ b/DockerTestImage/YAML/Deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: webapi
-        image: srswebapiimageregistry.azurecr.io/webapi
+        image: srswebapiimageregistry.azurecr.io/webapi::latest
         ports:
         - containerPort: 8080
